--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
   
-    
+    <header class="header">
+        <a href="#" class="logo"><img src="" alt=""></a>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">about</a>
+            <a href="#"> menu</a>
+             <a href="#">products</a>
+             <a href="#">review</a>
+             <a href="#">contact</a>
+             <a href="#">Blogs</a>
+        </nav>
+    </header>
 
 
 
