--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
     <header class="header">
-        <a href="#" class="logo"><img src="" alt=""></a>
+        <a href="#" class="logo"><img src="./assets/logo.jpg" alt=""></a>
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="#">about</a>
