--- a/index.html
+++ b/index.html
@@ -1,56 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./public/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Coffee Shop</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  
+<body class="h-screen w-screen bg-black flex items-center justify-center relative">
+  <!-- Background Video -->
+  <video
+    id="background-video"
+    class="absolute top-0 left-0 w-full h-full object-cover z-[-1]"
+    autoplay
+    loop
+    muted
+  >
+    <source src="" type="video/mp4" />
+    Sizning brauzeringiz videoni qo‘llab-quvvatlamaydi.
+  </video>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script src="./js/script.js"></script>
+  <!-- Content -->
+  <div class="text-center text-white">
+    <h1 class="text-4xl md:text-6xl font-bold mb-4">Enjoy Your Morning Coffee</h1>
+    <p class="text-lg md:text-xl mb-6">The Coffee Is Brewed By Roasting The Green Coffee Beans Over Hot Coals.</p>
+    <button
+      id="test-coffee-btn"
+      class="bg-yellow-500 hover:bg-yellow-600 text-black px-6 py-3 rounded-lg text-lg font-semibold transition"
+    >
+      Test Coffee
+    </button>
+  </div>
 </body>
 </html>
