--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
   <title>Coffee Shop</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen w-screen bg-black flex items-center justify-center relative">
-  <!-- Background Video -->
-  <video
-    id="background-video"
-    class="absolute top-0 left-0 w-full h-full object-cover z-[-1]"
-    autoplay
-    loop
-    muted
-  >
-    <source src="" type="video/mp4" />
-    Sizning brauzeringiz videoni qo‘llab-quvvatlamaydi.
-  </video>
+<body
+  class="h-screen w-screen bg-cover bg-center bg-no-repeat flex flex-col"
+  style="background-image: url('your-image-file.jpg');"
+>
+  <!-- Navbar -->
+  <nav class="flex justify-between items-center px-8 py-4 bg-black bg-opacity-50">
+    <div class="text-yellow-500 text-2xl font-bold">Coffee Shop</div>
+    <ul class="flex space-x-8 text-white">
+      <li><a href="#" class="hover:text-yellow-500">Home</a></li>
+      <li><a href="#" class="hover:text-yellow-500">About</a></li>
+      <li><a href="#" class="hover:text-yellow-500">Menu</a></li>
+      <li><a href="#" class="hover:text-yellow-500">Reservation</a></li>
+    </ul>
+  </nav>
 
-  <!-- Content -->
-  <div class="text-center text-white">
+  <!-- Main Content -->
+  <div class="flex-grow flex flex-col items-center justify-center text-center text-white">
     <h1 class="text-4xl md:text-6xl font-bold mb-4">Enjoy Your Morning Coffee</h1>
-    <p class="text-lg md:text-xl mb-6">The Coffee Is Brewed By Roasting The Green Coffee Beans Over Hot Coals.</p>
+    <p class="text-lg md:text-xl mb-6">
+      The Coffee Is Brewed By Roasting The Green Coffee Beans Over Hot Coals.
+    </p>
     <button
-      id="test-coffee-btn"
       class="bg-yellow-500 hover:bg-yellow-600 text-black px-6 py-3 rounded-lg text-lg font-semibold transition"
     >
       Test Coffee
