--- a/index.html
+++ b/index.html
@@ -1,37 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffee Shop</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+   
 </head>
-<body
-  class="h-screen w-screen bg-cover bg-center bg-no-repeat flex flex-col"
-  style="background-image: url('your-image-file.jpg');"
->
-  <!-- Navbar -->
-  <nav class="flex justify-between items-center px-8 py-4 bg-black bg-opacity-50">
-    <div class="text-yellow-500 text-2xl font-bold">Coffee Shop</div>
-    <ul class="flex space-x-8 text-white">
-      <li><a href="#" class="hover:text-yellow-500">Home</a></li>
-      <li><a href="#" class="hover:text-yellow-500">About</a></li>
-      <li><a href="#" class="hover:text-yellow-500">Menu</a></li>
-      <li><a href="#" class="hover:text-yellow-500">Reservation</a></li>
-    </ul>
-  </nav>
-
-  <!-- Main Content -->
-  <div class="flex-grow flex flex-col items-center justify-center text-center text-white">
-    <h1 class="text-4xl md:text-6xl font-bold mb-4">Enjoy Your Morning Coffee</h1>
-    <p class="text-lg md:text-xl mb-6">
-      The Coffee Is Brewed By Roasting The Green Coffee Beans Over Hot Coals.
-    </p>
-    <button
-      class="bg-yellow-500 hover:bg-yellow-600 text-black px-6 py-3 rounded-lg text-lg font-semibold transition"
-    >
-      Test Coffee
-    </button>
-  </div>
+<body>
+    
 </body>
 </html>
