--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coffee Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#1a1a1a]">
+<body class="">
     <!-- Navigation -->
     <nav class="absolute top-0 w-full py-6">
         <div class="container mx-auto px-4 flex items-center justify-between">
@@ -20,7 +20,7 @@
 
             <!-- Logo -->
             <div class="flex items-center">
-                <img src="logo.png" alt="Coffee Shop Logo" class="h-12">
+                <img src="./assets/svg/Logo.svg" alt="Coffee Shop Logo" class="h-12">
             </div>
 
             <!-- Right Menu -->
