--- a/index.html
+++ b/index.html
@@ -60,20 +60,19 @@
                     TEST COFFEE
                 </button>
             </div>
-            <div class="relative ">
-                <div class="w-16 h-16 rounded-full border-2 border-white flex items-center justify-center cursor-pointer group hover:bg-white/10 transition-all duration-300">
-                    <svg class="w-6 h-6  text-white" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M8 5v14l11-7z"/>
+
+            <div class="absolute right-72 bottom-40">
+                <div
+                    class="w-16 h-16 rounded-full border-2 border-white flex items-center justify-center cursor-pointer group hover:bg-white/10 transition-all duration-300">
+                    <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M8 5v14l11-7z" />
                     </svg>
                 </div>
-                <span class="absolute -bottom-8  left-1/2 -translate-x-1/2 text-white text-sm ">
-                    PLAY
+                <span class="absolute -bottom-8 right-8 transform translate-x-1/2 text-white text-sm whitespace-nowrap">
+                    PLAY VIDEO
                 </span>
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
-</a
