--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="h-screen w-screen bg-[url('/assets/img/img.png')] bg-cover bg-center">
-    <!-- Navigation -->
-    <nav class="absolute top-0 w-full py-6">
+<body>
+    <div class=" mx-auto h-screen w-screen bg-[url('/assets/img/img.png')] bg-cover bg-center">
+ <div class="container max-w-7xl mx-auto">
+    <nav class="  absolute top-0 w-full py-6">
         <div class="container mx-auto px-4 flex items-center justify-between">
             <!-- Left Menu -->
             <div class="flex items-center gap-8">
@@ -45,7 +46,8 @@
             </div>
         </div>
     </nav>
-    <div class="container mx-auto px-4 relative">
+</div>
+    <div class="container  max-w-7xl mx-auto px-4 relative">
         <div class="min-h-screen flex items-center">
             <div class="w-full lg:w-1/2">
                 <h1 class="text-5xl md:text-6xl lg:text-7xl font-bold text-white mb-6 leading-tight">
@@ -53,10 +55,10 @@
                     Morning Coffee.
                 </h1>
                 <p class="text-gray-300 text-lg mb-8 max-w-lg">
-                    The Coffee Is Brewed By Fist Roasting The Green Coffee Beans Over Hot Coals In Brazier. Given To
+                    The Coffee Is Brewed By Fist Roasting The Green Coffee <br> Beans Over Hot Coals In Brazier. Given To
                     Opportunity
                 </p>
-                <button class="bg-amber-600 hover:bg-amber-700 text-white px-8 py-4 rounded transition duration-300">
+                <button class="bg-[#C99E71] hover:bg-amber-700 text-white px-8 py-4  transition duration-300">
                     TEST COFFEE
                 </button>
             </div>
@@ -74,5 +76,6 @@
             </div>
         </div>
     </div>
+</div>aa
 </body>
 </html>
