--- a/index.html
+++ b/index.html
@@ -10,39 +10,42 @@
 
 <body>
     <div class=" mx-auto h-screen w-screen bg-[url('/assets/img/img.png')] bg-cover bg-center">
- <div class="container max-w-7xl mx-auto">
-    <nav class="  absolute top-0 w-full py-6">
-        <div class="container mx-auto px-4 flex items-center justify-between">
-            <!-- Left Menu -->
-            <div class="flex items-center gap-8">
-                <a href="#" class="text-amber-200">Home</a>
-                <a href="#" class="text-white hover:text-amber-200">About</a>
-                <a href="#" class="text-white hover:text-amber-200">Menu</a>
-                <a href="#" class="text-white hover:text-amber-200">Reservation</a>
-            </div>
+ <div class="container max-w-8xl mx-auto">
+    <nav class=" bg-[#1C1814] py-4 px-8 ">
+        <div class="container  mx-auto px-4">
+            <div class="flex items-center justify-between">
+                <div class="flex items-center space-x-8">
+                    <a href="#" class="text-[#C8A27A] hover:text-[#C8A27A]/80">Home</a>
+                    <a href="#" class="text-white hover:text-[#C8A27A]">About</a>
+                    <a href="#" class="text-white hover:text-[#C8A27A]">Menu</a>
+                    <a href="#" class="text-white hover:text-[#C8A27A]">Reservation</a>
+                </div>
 
-            <!-- Logo -->
-            <div class="flex items-center">
-                <img src="./assets/svg/Logo.svg" alt="Coffee Shop Logo" class="h-12">
-            </div>
+                <!-- Logo -->
+                <div class="flex items-center">
+                    <img src="./assets/svg/Logo.svg" alt="Coffee Shop Logo" class="h-12 w-auto">
+                </div>
 
-            <!-- Right Menu -->
-            <div class="flex items-center gap-8">
-                <a href="#" class="text-white hover:text-amber-200">Pages</a>
-                <a href="#" class="text-white hover:text-amber-200">Shop</a>
-                <a href="#" class="text-white hover:text-amber-200">Contact</a>
-                <button class="text-white hover:text-amber-200">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg>
-                </button>
-                <button class="text-white hover:text-amber-200">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
-                    </svg>
-                </button>
+                <!-- Right Menu Items -->
+                <div class="flex items-center space-x-8">
+                    <a href="#" class="text-white hover:text-[#C8A27A]">Pages</a>
+                    <a href="#" class="text-white hover:text-[#C8A27A]">Shop</a>
+                    <a href="#" class="text-white hover:text-[#C8A27A]">Contact</a>
+                    <!-- Search Icon -->
+                    <button class="text-white hover:text-[#C8A27A]">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
+                    </button>
+                    <!-- Cart Icon -->
+                    <button class="text-white hover:text-[#C8A27A]">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                                  d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z" />
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
     </nav>
@@ -63,19 +66,19 @@
                 </button>
             </div>
 
-            <div class="absolute right-72 bottom-40">
+            <div class="absolute right-[150px] bottom-[240px]">
                 <div
                     class="w-16 h-16 rounded-full border-2 border-white flex items-center justify-center cursor-pointer group hover:bg-white/10 transition-all duration-300">
                     <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M8 5v14l11-7z" />
                     </svg>
                 </div>
-                <span class="absolute -bottom-8 right-8 transform translate-x-1/2 text-white text-sm whitespace-nowrap">
+                <span class="absolute -bottom-7 right-8 transform translate-x-1/2 text-white text-sm whitespace-nowrap">
                     PLAY VIDEO
                 </span>
             </div>
         </div>
     </div>
-</div>aa
+</div>
 </body>
 </html>
