--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class=" mx-auto h-screen w-screen bg-[url('/assets/img/img.png')] bg-cover bg-center">
+ <div class=" mx-auto h-screen w-screen bg-[url('/assets/img/img.png')] bg-cover bg-center">
  <div class="container max-w-8xl mx-auto">
     <nav class=" bg-[#1C1814] py-4 px-8 ">
         <div class="container  mx-auto px-4">
@@ -20,25 +20,21 @@
                     <a href="#" class="text-white hover:text-[#C8A27A]">Menu</a>
                     <a href="#" class="text-white hover:text-[#C8A27A]">Reservation</a>
                 </div>
-
-                <!-- Logo -->
                 <div class="flex items-center">
                     <img src="./assets/svg/Logo.svg" alt="Coffee Shop Logo" class="h-12 w-auto">
                 </div>
 
-                <!-- Right Menu Items -->
                 <div class="flex items-center space-x-8">
                     <a href="#" class="text-white hover:text-[#C8A27A]">Pages</a>
                     <a href="#" class="text-white hover:text-[#C8A27A]">Shop</a>
                     <a href="#" class="text-white hover:text-[#C8A27A]">Contact</a>
-                    <!-- Search Icon -->
                     <button class="text-white hover:text-[#C8A27A]">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
                                   d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                         </svg>
                     </button>
-                    <!-- Cart Icon -->
+
                     <button class="text-white hover:text-[#C8A27A]">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
@@ -79,6 +75,56 @@
             </div>
         </div>
     </div>
+    <div class="bg-[#1C1814] ">
+    <div class="container mx-auto px-4">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <!-- Card 1 -->
+            <div class="group">
+                <div class="overflow-hidden rounded-lg transform transition-all duration-300 group-hover:scale-105">
+                    <img src="coffee1.jpg" alt="Best Coffee Flavour" 
+                         class="w-full h-64 object-cover">
+                </div>
+                <div class="mt-4">
+                    <div class="flex items-center gap-2 text-[#C8A27A] mb-2">
+                        <span class="text-xl font-semibold">01</span>
+                        <h3 class="text-xl font-semibold">Best Coffee Flavour</h3>
+                    </div>
+                    <p class="text-gray-400">Experience our expertly crafted coffee with unique flavour profiles.</p>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="group">
+                <div class="overflow-hidden rounded-lg transform transition-all duration-300 group-hover:scale-105">
+                    <img src="coffee2.jpg" alt="Place to get lost" 
+                         class="w-full h-64 object-cover">
+                </div>
+                <div class="mt-4">
+                    <div class="flex items-center gap-2 text-[#C8A27A] mb-2">
+                        <span class="text-xl font-semibold">02</span>
+                        <h3 class="text-xl font-semibold">Place to get lost</h3>
+                    </div>
+                    <p class="text-gray-400">Find your perfect escape in our cozy and welcoming atmosphere.</p>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="group">
+                <div class="overflow-hidden rounded-lg transform transition-all duration-300 group-hover:scale-105">
+                    <img src="coffee3.jpg" alt="Proper roasting" 
+                         class="w-full h-64 object-cover">
+                </div>
+                <div class="mt-4">
+                    <div class="flex items-center gap-2 text-[#C8A27A] mb-2">
+                        <span class="text-xl font-semibold">03</span>
+                        <h3 class="text-xl font-semibold">Proper roasting</h3>
+                    </div>
+                    <p class="text-gray-400">Each bean is carefully roasted to bring out its unique characteristics.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 </body>
 </html>
